# micare-sicilia

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  models.py
app/routes/: dashboard.py  upload.py
app/services/: backtest.py  backtest_jobs.py  database.py  feature_engineering.py  hierarchical_training.py  prediction.py  preprocessing.py  prophet_forecast.py  scientific_report.py  training.py  training_jobs.py  validation.py
app/static/css/: app.css
app/templates/: _table_preview.html  backtest_status.html  base.html  dashboard.html  preview.html  train_status.html  upload.html  validation_report.html
notebooks/: prophet-mic-v3.ipynb
scripts/: prophet_mic_v3_colab.py
src/micare_sicilia/: __init__.py  cli.py  config.py  data.py  model.py
tests/: test_data_improvements.py  test_preprocessing.py  test_training_prediction.py
